--- a/_layouts/plants.html
+++ b/_layouts/plants.html
@@ -4,7 +4,7 @@ layout: default
 <div class="content">
 	<section class="page">
 		<div class="container">
-			<div class="product-container">
+			<div class="plants-container">
 				{% include product-styles.html product=page %}
 				<div class="product-details" id="add">
 					<h3>{{ page.name }}</h3>
