--- a/_layouts/plants.html
+++ b/_layouts/plants.html
@@ -6,7 +6,7 @@ layout: default
 		<div class="container">
 			<div class="plants-container">
 				{% include product-styles.html product=page %}
-				<div class="product-details" id="add">
+				<div class="plants-details" id="add">
 					<h3>{{ page.name }}</h3>
 					{{ page.description_markdown | markdownify }}
 
