--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -1,5 +1,5 @@
-$brand-color: #7d59f2;
-$brand-color-2: #e371f6;
+$brand-color: #191970;
+$brand-color-2: #F5F5F5;
 $default-hero-image: "/images/hero/box-top.jpg";
 
 // Breakpoints
